syntax="proto3";

package example;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

// Defines the import path that should be used to import the generated package,
// and the package name.
option go_package = "github.com/abdybaevae/url-shortener/proto;links";

// These annotations are used when generating the OpenAPI file.
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    version: "1.0";
  };
  external_docs: {
    url: "https://github.com/abdybaevae/url-shortener";
    description: "Url shorten service";
  }
  schemes: HTTPS;
};

service LinkService {
  rpc Shorten(ShortenReq) returns (ShortenRes) {
    option (google.api.http) = {
      // Route to this method from POST requests to /api/v1/users
      post: "/api/v1/links"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Shorten link"
      description: "Shorten given link."
      tags: "Links"
    };
  }
  rpc GetOriginalFromShorten(GetOriginalFromShortenReq) returns (GetOriginalFromShortenRes) {
    option (google.api.http) = {
      // Route to this method from GET requests to /api/v1/users
      get: "/api/v1/links/{shortLink}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get original link"
      description: "Get original link by short link."
      tags: "Links"
    };
  }
}

message ShortenReq {
  string link = 1;
}

message ShortenRes {
  string shortLink = 1;
}
message GetOriginalFromShortenReq {
  string shortLink = 1;
}

message GetOriginalFromShortenRes {
  string originalLink = 1;
}
